# auf-render

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
scripts/: install_deps.sh
shaders/: CMakeLists.txt
src/: application.cpp  application.hpp  utils.cpp  utils.hpp
